force-app/main/default/objects/Registration__c/fields/AFS_Handover_Document_Date__c.field-meta.xml
<CustomField>
    <fullName>AFS_Handover_Document_Date__c</fullName>
    <label>AFS Handover Document Date</label>
    <type>Date</type>
</CustomField>