force-app/main/default/objects/Registration__c/fields/Challan_Copy_Uploaded__c.field-meta.xml
<CustomField>
    <fullName>Challan_Copy_Uploaded__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Challan Copy Uploaded</label>
    <type>Checkbox</type>
</CustomField>