force-app/main/default/objects/Registration__c/fields/CRM_Head_Approver__c.field-meta.xml
<CustomField>
    <fullName>CRM_Head_Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CRM Head Approver</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Registrations</relationshipName>
    <type>Lookup</type>
</CustomField>