force-app/main/default/objects/Registration__c/fields/Final_Agreement_Date__c.field-meta.xml
<CustomField>
    <fullName>Final_Agreement_Date__c</fullName>
    <label>Final Agreement Date</label>
    <type>DateTime</type>
</CustomField>