force-app/main/default/objects/Registration__c/fields/Final_Agreement_Uploded_FileName__c.field-meta.xml
<CustomField>
    <fullName>Final_Agreement_Uploded_FileName__c</fullName>
    <label>Final Agreement Uploded FileName</label>
    <type>TextArea</type>
</CustomField>