force-app/main/default/objects/Registration__c/fields/Index_Page_Uploded_File_Name__c.field-meta.xml
<CustomField>
    <fullName>Index_Page_Uploded_File_Name__c</fullName>
    <label>Index Page Uploded File Name</label>
    <type>TextArea</type>
</CustomField>