force-app/main/default/objects/Registration__c/fields/Is_Final_Agreement_uploaded__c.field-meta.xml
<CustomField>
    <fullName>Is_Final_Agreement_uploaded__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Final Agreement uploaded</label>
    <type>Checkbox</type>
</CustomField>