force-app/main/default/objects/Registration__c/fields/Is_Index_Page_Uploded__c.field-meta.xml
<CustomField>
    <fullName>Is_Index_Page_Uploded__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Index Page Uploded</label>
    <type>Checkbox</type>
</CustomField>