force-app/main/default/objects/Registration__c/fields/Is_ROC_Upload__c.field-meta.xml
<CustomField>
    <fullName>Is_ROC_Upload__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is ROC Upload</label>
    <type>Checkbox</type>
</CustomField>