force-app/main/default/objects/Registration__c/fields/Last_Call_Comment__c.field-meta.xml
<CustomField>
    <fullName>Last_Call_Comment__c</fullName>
    <label>Last Call Comment</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>