force-app/main/default/objects/Registration__c/fields/NOC_Date__c.field-meta.xml
<CustomField>
    <fullName>NOC_Date__c</fullName>
    <label>NOC Date</label>
    <type>DateTime</type>
</CustomField>