force-app/main/default/objects/Registration__c/fields/Paid_By__c.field-meta.xml
<CustomField>
    <fullName>Paid_by__c</fullName>
    <label>Paid by</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Customer</fullName>
            </value>
            <value>
                <fullName>Developer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>