force-app/main/default/objects/Registration__c/fields/Processing_Fees__c.field-meta.xml
<CustomField>
    <fullName>Processing_Fees__c</fullName>
    <label>Processing Fees</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>