force-app/main/default/objects/Registration__c/fields/Processing_Fees_Paid__c.field-meta.xml
<CustomField>
    <fullName>Processing_Fees_Paid__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Processing Fees Paid?</label>
    <type>Checkbox</type>
</CustomField>