force-app/main/default/objects/Registration__c/fields/Ready_Reckoner__c.field-meta.xml
<CustomField>
    <fullName>Ready_Reckoner__c</fullName>
    <formula>IF( Booking__r.Agreement_Value__c &lt;  Booking__r.Market_Value__c ,
IMAGE(&quot;/img/samples/flag_red.gif&quot;, &quot;Red Flag&quot;),
IMAGE(&quot;/img/samples/flag_green.gif&quot;, &quot;Green Flag&quot;)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ready Reckoner</label>
    <type>Text</type>
</CustomField>