force-app/main/default/objects/Registration__c/fields/Registration_Amount__c.field-meta.xml
<CustomField>
    <fullName>Registration_Amount__c</fullName>
    <label>Registration Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>