force-app/main/default/objects/Registration__c/fields/Registration_Amount_Paid__c.field-meta.xml
<CustomField>
    <fullName>Registration_Amount_Paid__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Registration Amount Paid?</label>
    <type>Checkbox</type>
</CustomField>