force-app/main/default/objects/Registration__c/fields/Registration_Scheduled_Date__c.field-meta.xml
<CustomField>
    <fullName>Registration_Scheduled_Date__c</fullName>
    <label>Registration Scheduled Date</label>
    <type>Date</type>
</CustomField>