force-app/main/default/objects/Registration__c/fields/Registration_Venue__c.field-meta.xml
<CustomField>
    <fullName>Registration_Venue__c</fullName>
    <label>Registration Venue</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>