force-app/main/default/objects/Registration__c/fields/Signed_AFS_Uploaded__c.field-meta.xml
<CustomField>
    <fullName>Signed_AFS_Uploaded__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Signed AFS Uploaded</label>
    <type>Checkbox</type>
</CustomField>