force-app/main/default/objects/Registration__c/fields/Stamp_Duty_Paid__c.field-meta.xml
<CustomField>
    <fullName>Stamp_Duty_Paid__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Stamp Duty Paid?</label>
    <type>Checkbox</type>
</CustomField>