force-app/main/default/objects/Registration__c/fields/Uploded_Index_Page_Date__c.field-meta.xml
<CustomField>
    <fullName>Uploded_Index_Page_Date__c</fullName>
    <label>Uploded Index Page Date</label>
    <type>DateTime</type>
</CustomField>