force-app/main/default/objects/Registration__c/fields/Verified_By_RM__c.field-meta.xml
<CustomField>
    <fullName>Verified_By_RM__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Verified By RM</label>
    <type>Checkbox</type>
</CustomField>