force-app/main/default/objects/Registration__c/validationRules/Validation_for_Registration_Date_Requir.validationRule-meta.xml
<ValidationRule>
    <fullName>Validation_for_Registration_Date_Requir</fullName>
    <active>false</active>
    <errorConditionFormula>AND(ISPICKVAL( Registration_Status__c , &apos;Registration Completed&apos;) ,ISBLANK( Registration_Date__c ))</errorConditionFormula>
    <errorMessage>Registration Date is Mandatory</errorMessage>
</ValidationRule>